compilador/CompiladorParser.py
# Generated from Compilador.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CompiladorParser ( Parser ):

    grammarFileName = "Compilador.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'leia'", "'escreva'", "'se'", "'senao'", 
                     "'entao'", "'fim'", "'enquanto'", "'faca'", "'int'", 
                     "'string'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'('", "')'", "';'", "'='", "'+'", "'-'", "'*'", "'/'", 
                     "'&&'", "'||'", "'!'", "'=='", "'>'", "'<'" ]

    symbolicNames = [ "<INVALID>", "LEIA", "ESCREVA", "SE", "SENAO", "ENTAO", 
                      "FIM", "ENQUANTO", "FACA", "INT_TIPO", "STRING_TIPO", 
                      "ID", "INT", "STRING", "LPAREN", "RPAREN", "SEMI", 
                      "ASSIGN", "PLUS", "MINUS", "MULT", "DIV", "AND", "OR", 
                      "NOT", "EQ", "GT", "LT", "WS" ]

    RULE_programa = 0
    RULE_comando = 1
    RULE_declaracao = 2
    RULE_atribuicao = 3
    RULE_entrada = 4
    RULE_saida = 5
    RULE_condicional = 6
    RULE_repeticao = 7
    RULE_expressao = 8
    RULE_tipo = 9

    ruleNames =  [ "programa", "comando", "declaracao", "atribuicao", "entrada", 
                   "saida", "condicional", "repeticao", "expressao", "tipo" ]

    EOF = Token.EOF
    LEIA=1
    ESCREVA=2
    SE=3
    SENAO=4
    ENTAO=5
    FIM=6
    ENQUANTO=7
    FACA=8
    INT_TIPO=9
    STRING_TIPO=10
    ID=11
    INT=12
    STRING=13
    LPAREN=14
    RPAREN=15
    SEMI=16
    ASSIGN=17
    PLUS=18
    MINUS=19
    MULT=20
    DIV=21
    AND=22
    OR=23
    NOT=24
    EQ=25
    GT=26
    LT=27
    WS=28

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CompiladorParser.EOF, 0)

        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CompiladorParser.ComandoContext)
            else:
                return self.getTypedRuleContext(CompiladorParser.ComandoContext,i)


        def getRuleIndex(self):
            return CompiladorParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = CompiladorParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 23
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3726) != 0):
                self.state = 20
                self.comando()
                self.state = 25
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 26
            self.match(CompiladorParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracao(self):
            return self.getTypedRuleContext(CompiladorParser.DeclaracaoContext,0)


        def atribuicao(self):
            return self.getTypedRuleContext(CompiladorParser.AtribuicaoContext,0)


        def entrada(self):
            return self.getTypedRuleContext(CompiladorParser.EntradaContext,0)


        def saida(self):
            return self.getTypedRuleContext(CompiladorParser.SaidaContext,0)


        def condicional(self):
            return self.getTypedRuleContext(CompiladorParser.CondicionalContext,0)


        def repeticao(self):
            return self.getTypedRuleContext(CompiladorParser.RepeticaoContext,0)


        def getRuleIndex(self):
            return CompiladorParser.RULE_comando

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando" ):
                listener.enterComando(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando" ):
                listener.exitComando(self)




    def comando(self):

        localctx = CompiladorParser.ComandoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_comando)
        try:
            self.state = 34
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9, 10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 28
                self.declaracao()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 29
                self.atribuicao()
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 3)
                self.state = 30
                self.entrada()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 4)
                self.state = 31
                self.saida()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 5)
                self.state = 32
                self.condicional()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 6)
                self.state = 33
                self.repeticao()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(CompiladorParser.TipoContext,0)


        def ID(self):
            return self.getToken(CompiladorParser.ID, 0)

        def SEMI(self):
            return self.getToken(CompiladorParser.SEMI, 0)

        def getRuleIndex(self):
            return CompiladorParser.RULE_declaracao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao" ):
                listener.enterDeclaracao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao" ):
                listener.exitDeclaracao(self)




    def declaracao(self):

        localctx = CompiladorParser.DeclaracaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaracao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.tipo()
            self.state = 37
            self.match(CompiladorParser.ID)
            self.state = 38
            self.match(CompiladorParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtribuicaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CompiladorParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(CompiladorParser.ASSIGN, 0)

        def expressao(self):
            return self.getTypedRuleContext(CompiladorParser.ExpressaoContext,0)


        def SEMI(self):
            return self.getToken(CompiladorParser.SEMI, 0)

        def getRuleIndex(self):
            return CompiladorParser.RULE_atribuicao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtribuicao" ):
                listener.enterAtribuicao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtribuicao" ):
                listener.exitAtribuicao(self)




    def atribuicao(self):

        localctx = CompiladorParser.AtribuicaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_atribuicao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.match(CompiladorParser.ID)
            self.state = 41
            self.match(CompiladorParser.ASSIGN)
            self.state = 42
            self.expressao(0)
            self.state = 43
            self.match(CompiladorParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntradaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEIA(self):
            return self.getToken(CompiladorParser.LEIA, 0)

        def LPAREN(self):
            return self.getToken(CompiladorParser.LPAREN, 0)

        def ID(self):
            return self.getToken(CompiladorParser.ID, 0)

        def RPAREN(self):
            return self.getToken(CompiladorParser.RPAREN, 0)

        def SEMI(self):
            return self.getToken(CompiladorParser.SEMI, 0)

        def getRuleIndex(self):
            return CompiladorParser.RULE_entrada

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntrada" ):
                listener.enterEntrada(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntrada" ):
                listener.exitEntrada(self)




    def entrada(self):

        localctx = CompiladorParser.EntradaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_entrada)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(CompiladorParser.LEIA)
            self.state = 46
            self.match(CompiladorParser.LPAREN)
            self.state = 47
            self.match(CompiladorParser.ID)
            self.state = 48
            self.match(CompiladorParser.RPAREN)
            self.state = 49
            self.match(CompiladorParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SaidaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ESCREVA(self):
            return self.getToken(CompiladorParser.ESCREVA, 0)

        def LPAREN(self):
            return self.getToken(CompiladorParser.LPAREN, 0)

        def expressao(self):
            return self.getTypedRuleContext(CompiladorParser.ExpressaoContext,0)


        def RPAREN(self):
            return self.getToken(CompiladorParser.RPAREN, 0)

        def SEMI(self):
            return self.getToken(CompiladorParser.SEMI, 0)

        def getRuleIndex(self):
            return CompiladorParser.RULE_saida

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSaida" ):
                listener.enterSaida(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSaida" ):
                listener.exitSaida(self)




    def saida(self):

        localctx = CompiladorParser.SaidaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_saida)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(CompiladorParser.ESCREVA)
            self.state = 52
            self.match(CompiladorParser.LPAREN)
            self.state = 53
            self.expressao(0)
            self.state = 54
            self.match(CompiladorParser.RPAREN)
            self.state = 55
            self.match(CompiladorParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SE(self):
            return self.getToken(CompiladorParser.SE, 0)

        def expressao(self):
            return self.getTypedRuleContext(CompiladorParser.ExpressaoContext,0)


        def ENTAO(self):
            return self.getToken(CompiladorParser.ENTAO, 0)

        def FIM(self):
            return self.getToken(CompiladorParser.FIM, 0)

        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CompiladorParser.ComandoContext)
            else:
                return self.getTypedRuleContext(CompiladorParser.ComandoContext,i)


        def SENAO(self):
            return self.getToken(CompiladorParser.SENAO, 0)

        def getRuleIndex(self):
            return CompiladorParser.RULE_condicional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicional" ):
                listener.enterCondicional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicional" ):
                listener.exitCondicional(self)




    def condicional(self):

        localctx = CompiladorParser.CondicionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_condicional)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(CompiladorParser.SE)
            self.state = 58
            self.expressao(0)
            self.state = 59
            self.match(CompiladorParser.ENTAO)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3726) != 0):
                self.state = 60
                self.comando()
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 66
                self.match(CompiladorParser.SENAO)
                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3726) != 0):
                    self.state = 67
                    self.comando()
                    self.state = 72
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 75
            self.match(CompiladorParser.FIM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RepeticaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENQUANTO(self):
            return self.getToken(CompiladorParser.ENQUANTO, 0)

        def expressao(self):
            return self.getTypedRuleContext(CompiladorParser.ExpressaoContext,0)


        def FACA(self):
            return self.getToken(CompiladorParser.FACA, 0)

        def FIM(self):
            return self.getToken(CompiladorParser.FIM, 0)

        def comando(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CompiladorParser.ComandoContext)
            else:
                return self.getTypedRuleContext(CompiladorParser.ComandoContext,i)


        def getRuleIndex(self):
            return CompiladorParser.RULE_repeticao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRepeticao" ):
                listener.enterRepeticao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRepeticao" ):
                listener.exitRepeticao(self)




    def repeticao(self):

        localctx = CompiladorParser.RepeticaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_repeticao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(CompiladorParser.ENQUANTO)
            self.state = 78
            self.expressao(0)
            self.state = 79
            self.match(CompiladorParser.FACA)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3726) != 0):
                self.state = 80
                self.comando()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 86
            self.match(CompiladorParser.FIM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOT(self):
            return self.getToken(CompiladorParser.NOT, 0)

        def expressao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CompiladorParser.ExpressaoContext)
            else:
                return self.getTypedRuleContext(CompiladorParser.ExpressaoContext,i)


        def LPAREN(self):
            return self.getToken(CompiladorParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(CompiladorParser.RPAREN, 0)

        def INT(self):
            return self.getToken(CompiladorParser.INT, 0)

        def STRING(self):
            return self.getToken(CompiladorParser.STRING, 0)

        def ID(self):
            return self.getToken(CompiladorParser.ID, 0)

        def MULT(self):
            return self.getToken(CompiladorParser.MULT, 0)

        def DIV(self):
            return self.getToken(CompiladorParser.DIV, 0)

        def PLUS(self):
            return self.getToken(CompiladorParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(CompiladorParser.MINUS, 0)

        def AND(self):
            return self.getToken(CompiladorParser.AND, 0)

        def OR(self):
            return self.getToken(CompiladorParser.OR, 0)

        def GT(self):
            return self.getToken(CompiladorParser.GT, 0)

        def LT(self):
            return self.getToken(CompiladorParser.LT, 0)

        def EQ(self):
            return self.getToken(CompiladorParser.EQ, 0)

        def getRuleIndex(self):
            return CompiladorParser.RULE_expressao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressao" ):
                listener.enterExpressao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressao" ):
                listener.exitExpressao(self)



    def expressao(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CompiladorParser.ExpressaoContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_expressao, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [24]:
                self.state = 89
                self.match(CompiladorParser.NOT)
                self.state = 90
                self.expressao(6)
                pass
            elif token in [14]:
                self.state = 91
                self.match(CompiladorParser.LPAREN)
                self.state = 92
                self.expressao(0)
                self.state = 93
                self.match(CompiladorParser.RPAREN)
                pass
            elif token in [12]:
                self.state = 95
                self.match(CompiladorParser.INT)
                pass
            elif token in [13]:
                self.state = 96
                self.match(CompiladorParser.STRING)
                pass
            elif token in [11]:
                self.state = 97
                self.match(CompiladorParser.ID)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 129
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 127
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                    if la_ == 1:
                        localctx = CompiladorParser.ExpressaoContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expressao)
                        self.state = 100
                        if not self.precpred(self._ctx, 14):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 14)")
                        self.state = 101
                        self.match(CompiladorParser.MULT)
                        self.state = 102
                        self.expressao(15)
                        pass

                    elif la_ == 2:
                        localctx = CompiladorParser.ExpressaoContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expressao)
                        self.state = 103
                        if not self.precpred(self._ctx, 13):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 13)")
                        self.state = 104
                        self.match(CompiladorParser.DIV)
                        self.state = 105
                        self.expressao(14)
                        pass

                    elif la_ == 3:
                        localctx = CompiladorParser.ExpressaoContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expressao)
                        self.state = 106
                        if not self.precpred(self._ctx, 12):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 12)")
                        self.state = 107
                        self.match(CompiladorParser.PLUS)
                        self.state = 108
                        self.expressao(13)
                        pass

                    elif la_ == 4:
                        localctx = CompiladorParser.ExpressaoContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expressao)
                        self.state = 109
                        if not self.precpred(self._ctx, 11):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 11)")
                        self.state = 110
                        self.match(CompiladorParser.MINUS)
                        self.state = 111
                        self.expressao(12)
                        pass

                    elif la_ == 5:
                        localctx = CompiladorParser.ExpressaoContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expressao)
                        self.state = 112
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 113
                        self.match(CompiladorParser.AND)
                        self.state = 114
                        self.expressao(11)
                        pass

                    elif la_ == 6:
                        localctx = CompiladorParser.ExpressaoContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expressao)
                        self.state = 115
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 116
                        self.match(CompiladorParser.OR)
                        self.state = 117
                        self.expressao(10)
                        pass

                    elif la_ == 7:
                        localctx = CompiladorParser.ExpressaoContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expressao)
                        self.state = 118
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 119
                        self.match(CompiladorParser.GT)
                        self.state = 120
                        self.expressao(9)
                        pass

                    elif la_ == 8:
                        localctx = CompiladorParser.ExpressaoContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expressao)
                        self.state = 121
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 122
                        self.match(CompiladorParser.LT)
                        self.state = 123
                        self.expressao(8)
                        pass

                    elif la_ == 9:
                        localctx = CompiladorParser.ExpressaoContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expressao)
                        self.state = 124
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 125
                        self.match(CompiladorParser.EQ)
                        self.state = 126
                        self.expressao(6)
                        pass

             
                self.state = 131
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_TIPO(self):
            return self.getToken(CompiladorParser.INT_TIPO, 0)

        def STRING_TIPO(self):
            return self.getToken(CompiladorParser.STRING_TIPO, 0)

        def getRuleIndex(self):
            return CompiladorParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)




    def tipo(self):

        localctx = CompiladorParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            _la = self._input.LA(1)
            if not(_la==9 or _la==10):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[8] = self.expressao_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expressao_sempred(self, localctx:ExpressaoContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 14)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 13)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 12)
         

            if predIndex == 3:
                return self.precpred(self._ctx, 11)
         

            if predIndex == 4:
                return self.precpred(self._ctx, 10)
         

            if predIndex == 5:
                return self.precpred(self._ctx, 9)
         

            if predIndex == 6:
                return self.precpred(self._ctx, 8)
         

            if predIndex == 7:
                return self.precpred(self._ctx, 7)
         

            if predIndex == 8:
                return self.precpred(self._ctx, 5)
         




